include_directories(.)
include_directories(./imgui)
add_subdirectory(imgui)
add_library(threedbg
    GL/gl3w.c
    ViewerApp.cc
    imgui_impl_glfw.cpp
    imgui_impl_opengl3.cpp
    lines.cc
    points.cc
    threedbg.cc
    )
target_link_libraries(threedbg
    glfw
    dl
    GL
    imgui
    pthread
    )
add_executable(demo
    demo.cc
    )
target_link_libraries(demo
    threedbg
    )
